--- a/app/assets/stylesheets/components/_basics.scss
+++ b/app/assets/stylesheets/components/_basics.scss
@@ -56,3 +56,12 @@ h1, h2, h3, h4, p {
 .custom_shadow {
   box-shadow: 1px 1px 5px -1px grey;
 }
+
+//BUTTON
+
+.button-back-navigation {
+  background-color: #4e3598;
+  margin-left: 20px;
+  border-radius: 50px;
+  width: 50px;
+}
