--- a/app/assets/stylesheets/pages/_chats.scss
+++ b/app/assets/stylesheets/pages/_chats.scss
@@ -23,6 +23,16 @@
   margin-top: 7px;
 }
 
+#user-image2 {
+  width: 100px;
+    height: 100px;
+    border: 4px solid #7a65bb;
+    border-radius: 50%;
+    margin-top: -10px;
+    margin-bottom: 25px;
+    margin-left: 122px;
+}
+
 .text-vertical-center {
   display: flex;
   align-items: left;
