--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -4,10 +4,11 @@
     data-controller="message"
     data-chat-target="message-content"
     data-message-user-id-value="<%= message.user.id %>">
-
-  <small class="message-info">
-    <strong><%= message.user.first_name %></strong>
-    <i><%= message.created_at.strftime("%a %b %e at %l:%M %p") %></i>
-  </small>
+    
+    <small class="message-info <%= 'message-info-user' if message.user == current_user%>" >
+      <strong><%= message.user.first_name if message.user != current_user  %> </strong>
+      <i><%= message.created_at.strftime("%a %b %e at %l:%M %p") %></i>
+    </small>
   <p class="message-content"><%= message.content %></p>
+  
 </div>
