--- a/app/views/children/index.html.erb
+++ b/app/views/children/index.html.erb
@@ -79,7 +79,7 @@
           <p class="child_card_boxes custom_shadow"><%= child.gender %></p>
         </div>
 
-        <div class="child_card_boxes custom_shadow">
+        <div class="child_card_boxes custom_shadow child_index_card_about">
           <p><%= child.about %></p>
         </div>
 
