--- a/app/assets/stylesheets/pages/_chats.scss
+++ b/app/assets/stylesheets/pages/_chats.scss
@@ -1,41 +1,64 @@
 .chat-box {
-  margin: 20px;
-  background-color: rgb(177, 162, 224);
+  margin: 10px;
+  background-color: rgba(177, 162, 224, 0.7);
   border-radius: 15px;
   padding: 10px;
-  box-shadow: 2px 2px 3px rgb(183, 183, 183);
+  height: 115px;
 }
 
 .notification-box {
-  margin: 20px;
-  background-color: rgba(177, 162, 224, 0.387);
+  margin: 10px;
+  background-color: rgba(177, 162, 224, 0.3);
   border-radius: 15px;
   padding: 10px;
-  box-shadow: 2px 2px 3px rgb(183, 183, 183);
-
+  height: 115px;
 }
 
-.user-image {
-  width: 80px;
-  height: 80px;
-  border: 4px solid rgb(122, 101, 187);
-  border-radius: 50%;
-  margin-top: 7px;
-}
-
-#user-image2 {
-  width: 100px;
-    height: 100px;
-    border: 4px solid #7a65bb;
-    border-radius: 50%;
-    margin-top: -10px;
-    margin-bottom: 25px;
-    margin-left: 122px;
-}
-
-.text-vertical-center {
+.chats_foto_fit {
   display: flex;
-  align-items: left;
-  flex-direction: column;
-  //padding-right: 140px;
+  justify-content: center; // Y axis
+  align-items: center;
+  overflow: hidden;
+  position: relative;
+  width: 130px;
+  object-fit: cover;
+  border-radius: 50px;
+  border: 3px solid rgb(177, 162, 224);
+  margin-left: 10px;
+}
+
+.chats_title {
+  margin: 30px 0px 0px 30px;
+}
+
+.chats_child {
+  font-size: 40px;
+  margin: 0px 0px -10px 0px;
+}
+
+.chats_parent {
+  color: rgb(80, 83, 84);
+  font-family: "Comic Neue", cursive;
+  margin: 0px;
+}
+
+.new_request {
+  margin: 0px;
+}
+
+.chats_title_text {
+  margin: auto 0px;
+}
+
+.chats_button1 {
+  font-family: "Comic Neue", cursive;
+  font-weight: 400;
+  font-style: normal;
+  color: rgb(80, 83, 84);
+  border: 4px solid;
+  border-color: rgba(177, 162, 224, 0.6);
+  background-color: rgba(177, 162, 224, 0.2);
+  margin: 10px 20px;
+  border-radius: 15px;
+  padding: 5px 40px;
 }
