--- a/app/assets/stylesheets/pages/_children.scss
+++ b/app/assets/stylesheets/pages/_children.scss
@@ -75,6 +75,10 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-family: "Comic Neue", cursive;
 }
 
+.child_index_card_about {
+  font-weight: bold;
+}
+
 .child_card_boxes {
   border-radius: 15px;
   border: 3px solid rgb(97, 181, 241);
