--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,23 +1,22 @@
-<%= current_user.email %>
 <div>
-  <h5 style="margin: 20px" class="luckiest-guy-regular"> All Requests </h5>
+  <h5 class="luckiest-guy-regular chats_title"> All Requests </h5>
 
     <% @pending_requests.each do |request| %>
       <%= link_to request_path(request) do %>
-        <div class="chat-box">
-            <%= cl_image_tag request.requester.children.first.photo.key, class: "user-image" %>
+        <div class="chat-box custom_shadow two_in_one_row">
+            <%= cl_image_tag request.requester.children.first.photo.key, class: "chats_foto_fit" %>
           <%# <img class="user-image" src="https://th.bing.com/th/id/OIP.jaCY5SwnrEfiIe5oy_B7HwHaE8?w=244&h=180&c=7&r=0&o=5&dpr=2&pid=1.7" alt="Parent Profile Picture"> %>
-          <div class="text-vertical-center">
+          <div class="chats_title_text">
             <div>
-              <p> New Request </p>
+              <p class="new_request"> New Request </p>
             </div>
 
             <div>
-              <h1 class="luckiest-guy-regular"> <%= request.requester.children.first.first_name %> </h1>
+              <h1 class="luckiest-guy-regular chats_child"> <%= request.requester.children.first.first_name %> </h1>
             </div>
 
             <div>
-              <h5 class="comic-neue-regular"> <%= request.requester.first_name %> </h5>
+              <h5 class="comic-neue-regular chats_parent"> <%= request.requester.first_name %> </h5>
             </div>
           </div>
         </div>
@@ -26,20 +25,19 @@
 </div>
 
 <div>
-  <h5 style="margin: 20px" class="luckiest-guy-regular"> All Chats </h5>
+  <h5 class="luckiest-guy-regular chats_title"> All Chats </h5>
   <% @chats.each do |chat| %>
     <%= link_to chat_path(chat) do %>
-      <div class="notification-box">
-      <%= cl_image_tag chat.request.receiver == current_user ? chat.request.requester.children.first.photo.key : chat.request.receiver.children.first.photo.key, class: "user-image" %>
+      <div class="notification-box custom_shadow two_in_one_row">
+      <%= cl_image_tag chat.request.receiver == current_user ? chat.request.requester.children.first.photo.key : chat.request.receiver.children.first.photo.key, class: "chats_foto_fit" %>
         <%# <img class="user-image" src="https://th.bing.com/th/id/OIP.jaCY5SwnrEfiIe5oy_B7HwHaE8?w=244&h=180&c=7&r=0&o=5&dpr=2&pid=1.7" alt="Parent Profile Picture"> %>
         <%#h3> <%= chat.messages.first.content %>
-        <div class="text-vertical-center">
-
+        <div class="chats_title_text">
           <div>
-            <h1 class="luckiest-guy-regular"> <%= chat.request.receiver == current_user ? chat.request.requester.children.first.first_name : chat.request.receiver.children.first.first_name%> </h1>
+            <h1 class="luckiest-guy-regular chats_child"> <%= chat.request.receiver == current_user ? chat.request.requester.children.first.first_name : chat.request.receiver.children.first.first_name%> </h1>
           </div>
           <div>
-            <h5 class="comic-neue-regular"> <%= chat.request.receiver == current_user ? chat.request.requester.first_name : chat.request.receiver.first_name %> </h5>
+            <h5 class="comic-neue-regular chats_parent"> <%= chat.request.receiver == current_user ? chat.request.requester.first_name : chat.request.receiver.first_name %> </h5>
           </div>
         </div>
       </div>
