chats are fixed

--- a/app/assets/stylesheets/components/_messages.scss
+++ b/app/assets/stylesheets/components/_messages.scss
@@ -22,7 +22,8 @@
   margin-bottom: 20px;
   background-color: #f8f6fb;
   border-radius: 15px;
-  height: 570px;
+  height: 460px;
+  overflow-y: scroll;
 }
 
 .message {
