--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,6 +5,6 @@
 </div>
 
 <div class="home">
-  <h2 class="homepage_message">Welcome to Playground Buddies</h2>
-  <%= button_to "Get Started", children_path, class: "button_start", method: :get %>
+  <h1 class="luckiest-guy-regular", id="home-message-text" >Welcome <%=  %> to Playground Buddies</h1>
+  <%= button_to "Get Started", children_path, class: "button_start custom_shadow", method: :get %>
 </div>
