--- a/app/assets/stylesheets/components/_homepage.scss
+++ b/app/assets/stylesheets/components/_homepage.scss
@@ -6,31 +6,43 @@ display: flex;
 justify-content: center;
 align-items: center;
 position: relative;
+margin-bottom: 20px;
+    margin-top: 45px;
 }
 
 .homepage_image {
   text-align: center;
   align-items: center;
+  margin-bottom: 15px;
   margin-top: 100px;
   img{
-    width: 180px;
+    width: 200px;
   }
 }
 
 .button_start {
   text-align: center;
   border-radius: 20px;
-  background-color: rgb(149, 202, 185);
-  font-family: "Comic Neue", cursive;
+  border: 4px, solid, #b5a0e5;
+  background-color: #ffdb36;
+  font-family: "Luckiest Guy", cursive;
+  color: #b5a0e5;
   align-items: center;
   padding: 10px;
   width: 250px;
-  border-color: white;
-  margin-left: 70px;
+  margin-left: 125px;
+  margin-top: 35px;
   font-weight: bold;
   font-size: large;
+  width: 150px;
+  height: 70px;
 }
 
 .home {
   margin-bottom: 300px;
+}
+
+#home-message-text {
+  color: #ffb168;
+  text-align: center;
 }
