linked the starting page to the profile

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,5 +6,5 @@
 
 <div class="home">
   <h1 class="luckiest-guy-regular", id="home-message-text" >Welcome <%=  %> to Playground Buddies</h1>
-  <%= button_to "Get Started", children_path, class: "button_start custom_shadow", method: :get %>
+  <%= button_to "Get Started", profile_path, class: "button_start custom_shadow", method: :get %>
 </div>
