update-profile-page

--- a/app/views/children/_form.html.erb
+++ b/app/views/children/_form.html.erb
@@ -27,6 +27,6 @@
   </div>
 
   <div class="submit">
-    <%= f.button :submit %>
+    <%= f.button :submit, value: "Update" %>
   </div>
 <% end %>
