--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -5,10 +5,9 @@
     data-chat-target="message-content"
     data-message-user-id-value="<%= message.user.id %>">
     
-    <small class="message-info <%= 'message-info-user' if message.user == current_user%>" >
-      <strong><%= message.user.first_name if message.user != current_user  %> </strong>
+    <small class="message-info <%= 'message-info-user' if message.user == user %>" data-message-target="messageInfo">
+      <strong data-message-target="name"><%= message.user.first_name %> </strong>
       <i><%= message.created_at.strftime("%a %b %e at %l:%M %p") %></i>
     </small>
   <p class="message-content"><%= message.content %></p>
-  
 </div>
