--- a/app/assets/config/manifest.json.erb
+++ b/app/assets/config/manifest.json.erb
@@ -1,7 +1,9 @@
 {
   "background_color": "white",
   "description": "Le Wagon is Europe's best coding bootcamp for creative people & entrepreneurs. Learn to code in 9 weeks with our fullstack coding bootcamp.",
-  "display": "fullscreen",
+  "display": "standalone",
+  "start_url": "/",
+  "scope": "/",
   "name": "Le Wagon",
   "icons": [
     <% files = Dir.entries(Rails.root.join("app/assets/images/icons/")).select {|f| !File.directory? f} %>
